@@ -38,7 +38,7 @@ import java.io.BufferedWriter;
 import java.io.IOException;
 import java.lang.reflect.UndeclaredThrowableException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Observer;
 import java.util.concurrent.Semaphore;
@@ -125,7 +125,7 @@ public class LogScriptEngine {
     this.simulation = simulation;
     if (!Cooja.isVisualized()) {
       var logName = logNumber == 0 ? "COOJA.testlog" : String.format("COOJA-%02d.testlog", logNumber);
-      var logFile = Paths.get(simulation.getCfg().logDir(), logName);
+      var logFile = Path.of(simulation.getCfg().logDir(), logName);
       try {
         logWriter = Files.newBufferedWriter(logFile, UTF_8);
         logWriter.write("Random seed: " + simulation.getRandomSeed() + "\n");
@@ -337,7 +337,7 @@ public class LogScriptEngine {
     }
     @Override
     public void append(String filename, String msg) {
-      try (var out = Files.newBufferedWriter(Paths.get(filename), UTF_8, CREATE, APPEND)) {
+      try (var out = Files.newBufferedWriter(Path.of(filename), UTF_8, CREATE, APPEND)) {
         out.write(msg);
       } catch (Exception e) {
         logger.warn("Test append failed: " + filename + ": " + e.getMessage());
@@ -345,7 +345,7 @@ public class LogScriptEngine {
     }
     @Override
     public void writeFile(String filename, String msg) {
-      try (var out = Files.newBufferedWriter(Paths.get(filename), UTF_8)) {
+      try (var out = Files.newBufferedWriter(Path.of(filename), UTF_8)) {
         out.write(msg);
       } catch (Exception e) {
         logger.warn("Write file failed: " + filename + ": " + e.getMessage());
